// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avatar shape 1`] = `
<div class="zv-skeleton zv-skeleton--animate">
  <div class="zv-skeleton__avatar zv-skeleton__avatar--square" style="width: 20px; height: 20px;"></div>
  <div class="zv-skeleton__content"></div>
</div>
`;

exports[`disable animate 1`] = `
<div class="zv-skeleton zv-skeleton--animate">
  <div class="zv-skeleton__content">
    <div class="zv-skeleton__row" style="width: 60%;"></div>
  </div>
</div>
`;

exports[`render chidren 1`] = `<div>Content</div>`;

exports[`row-width array 1`] = `
<div class="zv-skeleton zv-skeleton--animate">
  <div class="zv-skeleton__content">
    <div class="zv-skeleton__row" style="width: 100%;"></div>
    <div class="zv-skeleton__row" style="width: 30px;"></div>
    <div class="zv-skeleton__row" style="width: 5rem;"></div>
    <div class="zv-skeleton__row"></div>
  </div>
</div>
`;
